style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    font-family: 'Montserrat', sans-serif;
    color: white;
    margin: 0;
    padding: 0;
}

body {
    background-image: url(./fabrizio-conti-kXVogATbFgA-unsplash.jpg);
    height: 600;
    background-position: center;
    background-size: cover;
}

li a, button {
    font-size: 16px;
    font-weight: 600;
    color: #0a0922;
}

li a {
    color: white;
}

header {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding: 24px;
}

.nav-links {
    list-style: none;
}

.nav-links li {
    display: inline-block;
    padding: 0px 10px;
}

.nav-links li a {
    transition: all 0.3s ease 0s;
}

.nav-links li a:hover {
    color: rgb(186, 167, 225);
}

a {
    text-decoration: none;
}

.logo-text {
    font-weight: 800;
    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);    
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    font-size: 32px;
    transition: all 0.3s;
}

.logo-text:hover {
    font-size: 38px;
}

.logo {
    cursor: pointer;
    margin-right: auto;
}

.contact-button {
    margin-left: 10px;
    background-color: rgb(186, 167, 225);
    color: #2A303C;
    padding: 5px 20px;
    border-radius: 25px;
    border: solid 0px
}

.contact-button:hover {
    background-color: #0a0922;
    color: rgb(186, 167, 225);
    transition: all 0.3s ease 0s;
    cursor: pointer;
    border: solid 2px rgb(186, 167, 225);
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 24px;
    min-height: 80vh;
}

.title-prompt {
    font-size: 40px;
    margin-bottom: 20px;
    padding: 30px 30px;
    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    text-align: center;
}

.counter {
    height: 60px;
    width: 150px;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
}

.counter span {
    text-align: center;
    color: #2A303C;
    background-color: white;
    width: 100%;
    font-size: 24px;
    font-weight: 700;
    cursor: pointer;
    transition: 0.3s all;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.counter span.num {
    border-right: 1px solid rgba(0, 0, 0, 0.2);
    border-left: 1px solid rgba(0, 0, 0, 0.2);
    padding-left: 8px;
    padding-right: 8px;
    pointer-events: none;
}

.counter span:hover {
    color: rgb(186, 167, 225);
    font-size: 28px;
    width: 160px;
}

.counter-generate-buttons {
    display: flex;
    align-items: center;
    justify-content: center;
}

#generate-button {
    width: 70px;
    height: 60px;
    border-radius: 30px;
    margin-left: 20px;
    background: rgb(186, 167, 225);
    border: solid 0px;
    cursor: pointer;
    font-size: 18px;
    transition: all 0.3s ease;
    transform: scale(1);
}

#generate-button:hover {
    border: solid 1px rgb(186, 167, 225);
    background-color: #0a0922;
    transform: scale(1.1);
    color: rgb(186, 167, 225);
}

#generated-password {
    margin-top: 80px;
    font-size: 40px;
    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    text-align: center;
}

.hidden {
    display: none;
}

.show {
    display: inline;
}

.password-copy {
    display: flex;
    justify-content: center;
    align-items: center;
}

#copy-button {
    margin-left: 20px;
    margin-top: 80px;
    width: 70px;
    height: 60px;
    border: 0px solid;
    cursor: pointer;
    border-radius: 30px;
    background-color: rgb(186, 167, 225);
    transition: all 0.3s ease;
    transform: scale(1);
    font-size: 18px;
}

#copy-button:hover {
    border: 1px solid rgb(186, 167, 225);
    background-color: #0a0922;
    transform: scale(1.1);
    color: rgb(186, 167, 225);
}

.molecular-box {
    margin-top: -30px;
}

input {
    transition: all 0.3s ease;
    border: 0px solid transparent;
    background-color: #1e1d38;
}

input[type="text"] {
    border-radius: 14px;
    width: 250px;
    height: 40px;
    padding: 10px;
    font-size: 24px;
    color: #1e1d38;
}

input[type="submit"] {
    border-radius: 14px;
    font-size: 18px;
    margin-left: 10px;
    height: 64px;
    padding: 10px;
}

input[type="submit"]:hover {
    transform: scale(1.04);
    background-color: #E0C3FC;
    color: #0a0922;
    cursor: pointer;
}

input[type="text"]:hover {
    transform: scale(1.05);
    border: 3px solid #0a0922;
    background-color: #E0C3FC;
}

